tests-system/int-literals-7/output
T test1 { v = 0x_3 }
                ^ int-literals-7/foo.trlc:3: error: base 16 digit is required here
T test1 { v = 0x_3 }
                ^ int-literals-7/foo.trlc:3: error: unexpected character '_'
Processed 1 model(s), 0 check(s) and 1 requirement file(s) and found 2 error(s)
